# kinax

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: kinematics.py
kinax/: __init__.py  kinematics.py  model.py  skeleton.py  urdf.py
kinax/data/urdf/robots/baxter/: LICENSE
kinax/data/urdf/robots/franka_description/: LICENSE
kinax/data/urdf/robots/tiago_dual_description/: tiago_dual_wheeled_minimal.urdf
kinax/geometries/: distance.py  quaternion.py
kinax/utils/: files.py
scripts/: test.py  test_forward_kinematics.py  test_urdf.py
